# wordiff

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  build.py  buildozer.spec  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
scripts/: convert_icon.py
wordiff/: __init__.py  android_webview.py  cli.py  core.py  diff_logic.py  gui.py  main.py  version.py  web.py
wordiff/static/: index.html  script.js
