[tool.poetry]
name = "wordiff"
version = "0.1.1"
description = "직관적인 Word 문서 비교 도구 (GUI/CLI 지원)"
authors = ["SJ Lee"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sungjunlee/wordiff"
repository = "https://github.com/sungjunlee/wordiff"
keywords = ["word", "docx", "diff", "compare", "gui", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: General"
]
packages = [{ include = "wordiff" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
python-docx = "^1.1.2"
colorama = "^0.4.6"
pywebview = "^5.3.2"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.11.1"
Pillow = "^11.1.0"

[tool.poetry.scripts]
wordiff = "wordiff.gui:run_gui"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
